Fix placerholder visibility and header spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -93,7 +93,8 @@ a,
 }
 
 ::placeholder {
-  color: var(--text-color);
+  color: var(--text-color) !important;
+  opacity: 0.6 !important;
 }
 
 .input {
